--- a/views/header.ejs
+++ b/views/header.ejs
@@ -55,7 +55,7 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/productsDefects"
+                            <a class="nav-link active" aria-current="page" href="/productDefects"
                               >ProductsDefects</a>
                           </li>
                 
