--- a/views/defect/createDefect.ejs
+++ b/views/defect/createDefect.ejs
@@ -1,5 +1,5 @@
-<%- include('header') %>
-<form action="/defects/update/<%= defects.id %>" method="post">
+<%- include('../header') %>
+<form action="/defects/add" method="post">
     <div class="mb-3">
         <label  class="form-label">Name Defect</label>
         <input type="text" class="form-control"  name="defect_name">
@@ -16,10 +16,6 @@
         <label  class="form-label">Suggestion</label>
         <input type="text" class="form-control"  name="suggestion">
     </div>
-    <div class="mb-3">
-        <label  class="form-label">ProductNUm</label>
-        <input type="number" class="form-control"  name="product_id">
-    </div>
       <button type="submit" class="btn btn-warning">Submit</button>
 </form>
-<%- include('footer') %>
+<%- include('../footer') %>
