--- a/views/header.ejs
+++ b/views/header.ejs
@@ -56,7 +56,7 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/productDefects"
-                              >ProductsDefects</a>
+                              >Audit Data</a>
                           </li>
                 
                         </div>
