--- a/views/defectProduct/createProductDefect.ejs
+++ b/views/defectProduct/createProductDefect.ejs
@@ -2,11 +2,22 @@
 <form action="/productDefects/add" method="post">
     <div class="mb-3">
         <label  class="form-label">Product Code</label>
-        <input type="number" class="form-control"  name="productId">
+        <select name="productId" class="form-control">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
     </div>
     <div class="mb-3">
         <label  class="form-label">Defect Code</label>
-        <input type="number" class="form-control"  name="defectId">
+        <select name="defectId" class="form-control">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
     </div>
       <button type="submit" class="btn btn-warning">Submit</button>
 </form>
