--- a/views/product/create_product.ejs
+++ b/views/product/create_product.ejs
@@ -1,17 +1,23 @@
 <%- include('../header') %>
 <form action="/products/add" method="post">
-    <div class="mb-3">
-        <label  class="form-label">Product Name</label>
-        <input type="text" class="form-control"  name="product_name">
+    <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="floatingInput" name="product_name" required>
+        <label for="floatingInput">Product Name</label>
     </div>
-    <div class="mb-3">
-        <label  class="form-label">Category</label>
-        <input type="text" class="form-control"  name="category">
+    <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="floatingInput" name="category" required>
+        <label for="floatingInput">Category</label>
     </div>
-    <div class="mb-3">
-        <label  class="form-label">status</label>
-        <input type="text" class="form-control"  name="status">
+    <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="floatingInput" name="status" required>
+        <label for="floatingInput">Status</label>
     </div>
-      <button type="submit" class="btn btn-warning">Submit</button>
+    <% defects.forEach((defect) => { %>
+    <div class="form-check form-switch">
+        <input value="<%= defect.id %>" name="defectId" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+        <label class="form-check-label" for="flexSwitchCheckDefault"><%= defect.defect_name %></label>
+    </div>
+    <% }) %>
+    <button type="submit" class="btn btn-warning">Submit</button>
 </form>
 <%- include('../footer') %>
