--- a/views/defect/defectPage.ejs
+++ b/views/defect/defectPage.ejs
@@ -12,7 +12,7 @@
     <div class ="col-12 my-2">
         <table class="table table-dark table-striped">
             <thead>
-                <tr>
+                <td>No</td>
                     <td>id</td>
                     <td>Defect</td>
                     <td>Type</td>
@@ -22,16 +22,17 @@
                 </tr>
             </thead>
             <tbody>
-                <% defects.forEach(defect =>{%>
+                <% defects.forEach((defect,i) =>{%>
                 <tr>
+                    <th><%= i + 1 %></th>
                     <th><%= defect.id %></th>
                     <th><%= defect.defect_name %></th>
                     <th><%= defect.type %></th>
                     <th><%= defect.area %></th>
                     <th><%= defect.suggestion %></th>
                     <th>
-                        <a href="/defects/delete/<%=defect.id%>" class="btn btn-danger">-</a>
-                        <a href="/defects/update/<%=defect.id%>" class="btn btn-success">+</a>
+                        <a href="/defects/delete/<%=defect.id%>" class="btn btn-danger"><i class="fa-solid fa-trash" style="color: #f5f6f9;"></i></a>
+                        <a href="/defects/update/<%=defect.id%>" class="btn btn-warning"><i class="fa-solid fa-wrench" style="color: #8e2411;"></i></a>
                     </th>
                 </tr>
                 <% })%>
