--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -13,6 +13,7 @@
         <table class="table table-dark table-striped">
             <thead>
                 <tr>
+                    <td>No</td>
                     <td>id</td>
                     <td>Product Name</td>
                     <td>Category</td>
@@ -21,8 +22,9 @@
                 </tr>
             </thead>
             <tbody>
-                <% products.forEach(product =>{%>
+                <% products.forEach((product,i) =>{%>
                 <tr>
+                    <th><%= i + 1 %></th>
                     <th><%= product.id %></th>
                     <th><%= product.product_name %></th>
                     <th><%= product.category %></th>
