--- a/views/productDefect/product_defect_page.ejs
+++ b/views/productDefect/product_defect_page.ejs
@@ -25,6 +25,7 @@
         <table class="table table-dark table-striped">
             <thead>
                 <tr>
+                    <td>Index</td>
                     <td>Product Name</td>
                     <td>Category</td>
                     <td>Defect Name</td>
@@ -33,8 +34,9 @@
                 </tr>
             </thead>
             <tbody>
-                <% productDefects.forEach(productDefect =>{%>
+                <% productDefects.forEach((productDefect, i) =>{%>
                 <tr>
+                    <th><%= i + 1 %></th>
                     <th><%= productDefect.product.product_name %></th>
                     <th><%= productDefect.product.category %></th>
                     <th><%= productDefect.defect.defect_name %></th>
