update productDefects views

--- a/views/defect/defectPage.ejs
+++ b/views/defect/defectPage.ejs
@@ -13,7 +13,7 @@
         <table class="table table-dark table-striped">
             <thead>
                 <td>No</td>
-                    <td>id</td>
+                    <td>Defect ID</td>
                     <td>Defect</td>
                     <td>Type</td>
                     <td>Area</td>
