--- a/views/defectProduct/productDefectPage.ejs
+++ b/views/defectProduct/productDefectPage.ejs
@@ -25,6 +25,8 @@
         <table class="table table-dark table-striped">
             <thead>
                 <tr>
+                    <td>No</td>
+                    <td>Product ID</td>
                     <td>Product Name</td>
                     <td>Category</td>
                     <td>Defect name</td>
@@ -34,16 +36,18 @@
                 </tr>
             </thead>
             <tbody>
-                <% productDefects.forEach(productDefect =>{%>
                 <tr>
+                    <% productDefects.forEach((productDefect) =>{%>
+                    <th><%=productDefect.id %></th>
+                    <th><%= productDefect.product.id %></th>
                     <th><%= productDefect.product.product_name %></th>
                     <th><%= productDefect.product.category %></th>
                     <th><%= productDefect.defect.defect_name %></th>
                     <th><%= productDefect.defect.type %></th>
                     <th><%= productDefect.createdAt %></th>
                     <th>
-                        <a href="/productDefects/delete/<%=productDefect.productId%>" class="btn btn-danger"><i class="fa-solid fa-trash" style="color: #d4d9e2;"></i></a>
-                        <a href="/productDefects/update/<%=productDefect.productId%>" class="btn btn-warning"><i class="fa-solid fa-wrench" style="color: #d80707ce;"></i></a>
+                        <a href="/productDefects/delete/<%=productDefect.id%>" class="btn btn-danger"><i class="fa-solid fa-trash" style="color: #d4d9e2;"></i></a>
+                        <a href="/productDefects/update/<%=productDefect.id%>" class="btn btn-warning"><i class="fa-solid fa-wrench" style="color: #d80707ce;"></i></a>
                         <a href="/productDefects/product/search/<%=productDefect.productId%>" class="btn btn-info"><i class="fa-solid fa-eye"></i></a>
                     </th>
                 </tr>
