--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -14,7 +14,7 @@
             <thead>
                 <tr>
                     <td>No</td>
-                    <td>id</td>
+                    <td>Product ID</td>
                     <td>Product Name</td>
                     <td>Category</td>
                     <td>Status</td>
