--- a/views/defectProduct/historyProductDefect.ejs
+++ b/views/defectProduct/historyProductDefect.ejs
@@ -17,7 +17,7 @@
             <thead>
                 <tr>
                     <tr>
-                        <td>id</td>
+                        <td>Defect ID</td>
                         <td>Defect Name</td>
                         <td>Type</td>
                         <td>Area</td>
@@ -28,7 +28,7 @@
             <tbody>
                 <tr>
                     <% results.defects.forEach(item =>{%>
-                        <th><%= item.id %></th>
+                    <th><%= item.id %></th>
                     <th><%= item.defect_name %></th>
                     <th><%= item.type %></th>
                     <th><%= item.area %></th>
