--- a/views/defectProduct/updateProductDefect.ejs
+++ b/views/defectProduct/updateProductDefect.ejs
@@ -3,7 +3,7 @@
     <div class="mb-3">
         <label  class="form-label">Product Code</label> 
         <select name="productId" class="form-control">
-            <option value=""></option>
+            <option value="<%=productDefects.product.product_name%>" selected><%=productDefects.product.product_name%></option>
             <% productDefects.products.forEach((item)=> { %>
                 <option value="<%=item.id%>"><%=item.product_name%></option>
                 <% }); %>
@@ -12,7 +12,7 @@
     <div class="mb-3">
         <label  class="form-label">Defect Code</label>
         <select name="defectId" class="form-control">
-            <option value=""></option>
+            <option value="<%=productDefects.defect.defect_name%>" selected><%=productDefects.defect.defect_name%></option>
             <% productDefects.defects.forEach((item)=> { %>
                 <option value="<%=item.id%>"><%=item.defect_name%></option>
                 <% }); %>
