--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         deserunt nihil fugiat eos animi! Animi atque id laboriosam sequi minus,
         autem sapiente, vero quam cumque aliquid vel est, possimus aut!
       </p>
-      <form class="d-flex ms-auto" role="search">
+      <form class="d-flex ms-auto" role="search" method="get">
         <input
           class="form-control me-2"
           type="search"
