--- a/views/product/update_product.ejs
+++ b/views/product/update_product.ejs
@@ -12,6 +12,8 @@
         <input value="<%= products.status %>" type="text" class="form-control" id="floatingInput" name="status" required>
         <label for="floatingInput">Status</label>
     </div>
-    <button type="submit" class="btn btn-warning">Submit</button>
+    <div class="d-grid gap-2">
+        <button type="submit" class="btn btn-warning">Submit</button>
+    </div>
 </form>
 <%- include('../footer') %>
