--- a/views/productDefect/product_defect_page.ejs
+++ b/views/productDefect/product_defect_page.ejs
@@ -25,28 +25,37 @@
         <table class="table table-dark table-striped">
             <thead>
                 <tr>
-                    <td>Index</td>
-                    <td>ID</td>
-                    <td>Product</td>
+                    <td>No</td>
+                    <td>Product ID</td>
+                    <td>Product Name</td>
                     <td>Category</td>
-                    <td>Defects</td>
+                    <td>Defect Name</td>
+                    <td>Type</td>
+                    <td>Created At</td>
+                    <td>Actions</td>
                 </tr>
             </thead>
             <tbody>
-                <% for(let i = 0; i < productsDefectsResult.length; i++) { %>
-                    <% let defects = productsDefectsResult[i].defects %>
-                    <tr>
-                        <th><%= i + 1 %></th>
-                        <th><%= productsDefectsResult[i].id %></th>
-                        <th><%= productsDefectsResult[i].product_name %></th>
-                        <th><%= productsDefectsResult[i].category %></th>
-                        <th>
-                            <% for(let j = 0; j < defects.length; j++) { %>
-                              <%= defects[j].defect_name %>
-                            <% } %>
-                        </th>
-                    </tr>
-                <% } %>
+                <tr>
+                    <% productDefects.forEach((productDefect, i) =>{%>
+                    <th><%= i + 1 %></th>
+                    <th><%= productDefect.product.id %></th>
+                    <th><%= productDefect.product.product_name %></th>
+                    <th><%= productDefect.product.category %></th>
+                    <th><%= productDefect.defect.defect_name %></th>
+                    <th><%= productDefect.defect.type %></th>
+                    <th>
+                        <% let createdAt = productDefect.createdAt.toString(); %>
+                        <% let result = createdAt.split('GMT')[0]+'GMT'; %>
+                        <%= result %>
+                    </th>
+                    <th>
+                        <a href="/productDefects/delete/<%=productDefect.id%>" class="btn btn-danger"><i class="fa-solid fa-trash" style="color: #d4d9e2;"></i></a>
+                        <a href="/productDefects/update/<%=productDefect.id%>" class="btn btn-warning"><i class="fa-solid fa-wrench" style="color: #d80707ce;"></i></a>
+                        <a href="/productDefects/product/search/<%=productDefect.productId%>" class="btn btn-info"><i class="fa-solid fa-eye"></i></a>
+                    </th>
+                </tr>
+                <% })%>
             </tbody>
         </table>
     </div>
