--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,28 +15,17 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-12">
-          <h1>Auditor Application App</h1>
-        </div>
-      </div>
-
       <div class="row">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg" style="background-color: #ffd75c">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/">Home</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
+              <a class="navbar-brand" href="/">
+                <img 
+                  src="app_logo.png" 
+                  alt="app logo"
+                  width="140"
+                  height="70"
+                >
+              </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -55,7 +44,6 @@
                             <a class="nav-link active" aria-current="page" href="/productDefects"
                               >Audit Data</a>
                           </li>
-                
                         </div>
                     </div>
                 </nav>
