--- a/views/defect/update_defect.ejs
+++ b/views/defect/update_defect.ejs
@@ -1,4 +1,5 @@
 <%- include('../header') %>
+<div class="container">
 <form action="/defects/update/<%= defects.id %>" method="post">
     <div class="form-floating mb-3">
         <input value="<%= defects.defect_name %>" type="text" class="form-control" id="floatingInput" name="defect_name" required>
@@ -20,4 +21,5 @@
       <button type="submit" class="btn btn-warning">Submit</button>
     </div>
 </form>
+</div>
 <%- include('../footer') %>
