--- a/views/product/product_page.ejs
+++ b/views/product/product_page.ejs
@@ -1,13 +1,26 @@
 <%- include('../header') %>
+<div class="container">
 <div class="row text-center">
     <div class="col-12">
-        <h3>All Product </h3>
+        <h3>Product List</h3>
+        <form class="d-flex ms-auto" action="/products/findByName/" method="get" >
+            <input
+              id="searchquery"
+              class="form-control me-2"
+              type="text"
+              name="keyword"
+              placeholder="Search"
+            />
+            <button class="btn btn-outline-warning" type="submit">
+              Search
+            </button>
+        </form>
     </div>
     <div class="col-12 my-2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, eligendi? Quidem nobis architecto minima repudiandae deleniti beatae eaque accusantium nostrum ducimus odio. Ad excepturi sunt quo atque id, assumenda veniam!</p>
+        <p>Wanna take a look at all the products that you have? Feel like adding a new product? You're in the right place!</p>
     </div>
     <div class="add">
-        <a href="/products/add" class="btn btn-outline-dark"><i class="fa-solid fa-square-plus"></i> Add Product</a>
+        <a href="/products/add" class="btn btn-outline-warning"><i class="fa-solid fa-square-plus"></i> Add Product</a>
     </div>
     <div class ="col-12 my-2">
         <table class="table table-dark table-striped">
@@ -33,7 +46,7 @@
                         <a href="/products/delete/<%= product.id %>" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i>
                         </a>
-                        <a href="/products/update/<%= product.id %>" class="btn btn-success">
+                        <a href="/products/update/<%= product.id %>" class="btn btn-warning">
                             <i class="fa-solid fa-pencil"></i>
                         </a>
                     </th>
@@ -42,5 +55,6 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
 <%- include('../footer') %>
