--- a/views/product/update_product.ejs
+++ b/views/product/update_product.ejs
@@ -1,4 +1,5 @@
 <%- include('../header') %>
+<div class="container">
 <form action="/products/update/<%= products.id %>" method="post">
     <div class="form-floating mb-3">
         <input value="<%= products.product_name %>" type="text" class="form-control" id="floatingInput" name="product_name" required>
@@ -16,4 +17,5 @@
         <button type="submit" class="btn btn-warning">Submit</button>
     </div>
 </form>
+</div>
 <%- include('../footer') %>
