--- a/views/productDefect/create_product_defect.ejs
+++ b/views/productDefect/create_product_defect.ejs
@@ -1,4 +1,5 @@
 <%- include('../header') %>
+<div class="container">
 <form action="/productDefects/add" method="post">
     <div class="form-floating mb-3">
         <select name="productId" class="form-control" required>
@@ -19,4 +20,5 @@
         <button type="submit" class="btn btn-warning">Submit</button>
     </div>
 </form>
+</div>
 <%- include('../footer') %>
