--- a/views/productDefect/history_product_defect.ejs
+++ b/views/productDefect/history_product_defect.ejs
@@ -1,4 +1,5 @@
 <%- include('../header') %>
+<div class="container">
 <div class="row text-center">
     <div class="col-12">
         <h3>History Defect</h3>
@@ -38,5 +39,6 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
 <%- include('../footer') %>
