--- a/views/productDefect/product_defect_page.ejs
+++ b/views/productDefect/product_defect_page.ejs
@@ -1,26 +1,35 @@
 <%- include('../header') %>
+<div class="container">
 <div class="row text-center">
     <div class="col-12">
-        <h3>Audit Data </h3>
-        <form class="d-flex ms-auto" action="/productDefects/product/search" method="get" >
+        <h3>Audit Data (Detailed)</h3>
+        <form class="d-flex ms-auto" action=" " method="get" >
             <input
               class="form-control me-2"
               type="number"
               name="keyword"
               placeholder="Search"
             />
-            <button class="btn btn-outline-success" type="submit">
+            <button class="btn btn-outline-warning" type="submit">
               Search
             </button>
-          </form>
+        </form>
     </div>
     <div class="col-12 my-2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, eligendi? Quidem nobis architecto minima repudiandae deleniti beatae eaque accusantium nostrum ducimus odio. Ad excepturi sunt quo atque id, assumenda veniam!</p>
+        <p>Trying to keep your products' defect(s) in check? You've come to the right place!</p>
     </div>
     
-    <div class="add">
-        <a href="/productDefects/add" class="btn btn-outline-dark"><i class="fa-solid fa-square-plus"></i> Start Audit  </a>
+    <div class="container text-center">
+    <div class="row">
+        <div class="add">
+            <a href="/productDefects/add" class="btn btn-outline-warning"><i class="fa-solid fa-square-plus"></i> Start Audit  </a>
+        </div>
+        <div class="detailed">
+            <a href="/productDefects/detailed" class="btn btn-outline-info">Detailed List</a>
+        </div>
     </div>
+    </div>
+
     <div class ="col-12 my-2">
         <table class="table table-dark table-striped">
             <thead>
@@ -59,5 +68,6 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
 <%- include('../footer') %>
