--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,16 +4,15 @@
         deserunt nihil fugiat eos animi! Animi atque id laboriosam sequi minus,
         autem sapiente, vero quam cumque aliquid vel est, possimus aut!
       </p>
-      <form class="d-flex ms-auto" role="search" method="get">
+      <form class="d-flex ms-auto" role="search" method="get" action="/product/findByName/{nama_produk}">
         <input
           class="form-control me-2"
           type="search"
           placeholder="Search"
           aria-label="Search"
+          name="name"
         />
-        <button class="btn btn-outline-success" type="submit">
-          Search
-        </button>
+        <button class="btn btn-primary" type="submit">Search</button>
       </form>
     </div>
  <%- include('footer') %>
