Update Home dan some Touch

--- a/views/defectProduct/historyProductDefect.ejs
+++ b/views/defectProduct/historyProductDefect.ejs
@@ -4,7 +4,7 @@
         <h3>History Defect</h3>
     </div>
     <div class="col-12 my-2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, eligendi? Quidem nobis architecto minima repudiandae deleniti beatae eaque accusantium nostrum ducimus odio. Ad excepturi sunt quo atque id, assumenda veniam!</p>
+        <p>See your audit results based on product, keep going to enhance our product</p>
     </div>
     <div class="title">
         <h5>
