--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auditor App</title>
+    <title> Auditor App</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,16 +21,22 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-12">
-          <h1>Auditor Application App</h1>
+          <div class="p-3 mb-2 bg-dark text-white">
+            <h1> <img src="https://img.freepik.com/premium-vector/abstract-modern-colorful-loop-rings-logo-design-template-universal-gradient-color-vector-logotype_708255-356.jpg" alt="" width="100"> Auditor Application App</h1>
+          </div>
         </div>
       </div>
 
       <div class="row">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-brand" href="/">
+              <div class="p-3 mb-2 bg-dark text-white">
+                Home
+              </div>
+              </a>
             <button
-              class="navbar-toggler"
+              class="btn btn-light"
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent"
@@ -43,19 +49,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/products"
+                  <a class="btn btn-outline-dark" aria-current="page" href="/products"
                     >Products</a>
                 </li>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/defects"
+                        <a class="btn btn-outline-dark" aria-current="page" href="/defects"
                           >Defects</a>
                       </li>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/productDefects"
+                            <a class="btn btn-outline-dark" aria-current="page" href="/productDefects"
                               >Audit Data</a>
                           </li>
                 
